[package]
name = "confine-builder"
version = "0.1.0"
edition = "2021"
authors = ["Fabian Diez <contact@fdiez.tech>"]
homepage = "https://github.com/fabiandiez/confine-rs"
repository = "https://github.com/fabiandiez/confine-rs"
license = "MIT OR Apache-2.0"
description = "Builder implementation for the confine crate"
categories = ["config"]
keywords = ["config", "configuration", "builder", "config-rs"]

[dependencies]
config = "0.14.0"
serde = "1.0.206"
thiserror = "1.0.63"
