[package]
name = "confine-macro"
version = "0.1.1"
edition = "2021"
authors = ["Fabian Diez <contact@fdiez.tech>"]
homepage = "https://github.com/fabiandiez/confine-rs"
repository = "https://github.com/fabiandiez/confine-rs"
license = "MIT OR Apache-2.0"
description = "Macro implementation for the confine crate"
categories = ["config"]
keywords = ["config", "configuration", "macro", "config-rs"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }
thiserror = "1.0.63"
toml = "0.8.19"

confine-builder = { path = "../confine-builder", version = "0.1.0" }
config = { version = "0.14.0", features = ["toml"] }
